# actix-web-async-graphql-sqlx

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
docker/: docker-compose.yaml
migrations/: 20210421160013_init.sql  README.md
server/: Cargo.toml
server/config/: base.toml  log4rs.toml
server/resources/: base.toml  log4rs.toml
server/src/: lib.rs  main.rs
server/src/common/error/: errors.rs
server/src/config/: configs.rs
server/src/domain/: mod.rs  users.rs
server/src/error/: errors.rs
server/src/gql/: mod.rs  mutations.rs  queries.rs
server/src/repository/: users.rs
server/src/rest/: health_check.rs
server/src/security/: crypto.rs
server/src/service/: users.rs
server/src/users/: models.rs  services.rs
server/src/web/: mod.rs
server/src/web/gql/: mod.rs  mutations.rs  queries.rs
server/src/web/rest/: health_check.rs  users.rs
