[package]
authors = ["liteng <yujinjianixin@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
anyhow = "1.0.40"
async-graphql = {version = "2.8.4", features = ["chrono", "uuid", "apollo_tracing", "log"]}
async-graphql-actix-web = "2.8.4"
async-trait = "0.1.50"
chrono = {version = "0.4.19", features = ["serde"]}
config = "0.11.0"
dotenv = "0.15.0"
humantime = "2.1.0"
humantime-serde = "1.0.1"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = {version = "1.0.0", features = ["toml_format"]}
regex = "1.5.3"
rust-argon2 = "0.8.3"
serde = "1.0.125"
serde-aux = "2.2.0"
serde_json = "1.0.64"
server = { path = "." }
sqlx = {version = "0.4.2", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono"]}
thiserror = "1.0.24"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
validator = {version = "0.13.0", features = ["derive"]}
